[tool.poetry]
name = "athena-tests"
version = "1.0.0"
description = "Test environment for Athena modules"
authors = ["Aleks Petrov <aleks.petrov@tum.de>"]
package-mode = false

[tool.poetry.dependencies]
python = "3.11.*"
fastapi = "^0.109.1"
langchain-core = "^0.2.43"
pydantic = "1.10.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
