[tool.poetry]
name = "module_modeling_llm"
version = "0.1.0"
description = "Modeling assessment LLM module."
authors = ["Matthias Lehner <ga59bip@tum.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.*"
athena = { path = "../../../athena", develop = true }
#athena = { git = "https://github.com/ls1intum/Athena.git", rev = "d9ff3bd", subdirectory = "athena"}
llm_core = { path = "../../../llm_core", develop = true }
python-dotenv = "1.0.0"
nltk = "3.9.1"
gitpython = "3.1.41"
tiktoken = "0.7.0"

[tool.poetry.group.dev.dependencies]
pydantic = "^2.11.7"
prospector = "^1.10.2"
types-requests = "2.31.0.8"
pytest-asyncio = "^0.26.0"
setuptools = "^69.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"

[tool.poetry.scripts]
module = "athena:run_module"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
