[tool.poetry]
name = "module_modeling_llm"
version = "0.1.0"
description = "Modeling assessment LLM module."
authors = ["Matthias Lehner <ga59bip@tum.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.*"
athena = { path = "../../../athena", develop = true }
#athena = { git = "https://github.com/ls1intum/Athena.git", rev = "d9ff3bd", subdirectory = "athena"}
llm_core = { path = "../../../llm_core", develop = true }
nltk = "3.9.2"
tiktoken = "0.12.0"

[tool.poetry.group.dev.dependencies]
pydantic = "2.11.7"
prospector = "1.17.3"
types-requests = "2.32.4.20250913"
pytest-asyncio = "0.26.0"
setuptools = "80.9.0"

[tool.poetry.group.test.dependencies]
pytest = "8.2.0"

[tool.poetry.scripts]
module = "athena:run_module"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
