[tool.poetry]
name = "module_programming_llm"
version = "0.1.0"
description = "Programming assessment LLM module."
authors = ["Felix Dietrich <felixtj.dietrich@tum.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.*"
# if you have local changes in the common Athena module, use the line below. Otherwise, please use a VCS stable version. Also, a version with tag = "" is possible.
# athena = { path = "../athena", develop = true }
athena = { path = "../../../athena", develop = true }
#athena = { git = "https://github.com/ls1intum/Athena.git", rev = "2da2d33", subdirectory = "athena"}
llm_core = { path = "../../../llm_core", develop = true }
# gitpython = "^3.1.45"
tiktoken = "0.12.0"
#promptlayer = "^0.1.85" # do we need this?
# python-dotenv = "^1.2.1"
nltk = "3.9.2"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.4.20250913"
pydantic = "^2.11.7"
prospector = "^1.17.3"
setuptools = "^80.9.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.26.0"

[tool.poetry.scripts]
module = "athena:run_module"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
