[tool.poetry]
name = "module_programming_quality_llm"
version = "2.5"
description = "Programming quality LLM module."
authors = ["Aniruddh Zaveri <aniruddh.zaveri@tum.de>", "Konrad Weiß <konrad2002.weiss@tum.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.*"
# if you have local changes in the common Athena module, use the line below. Otherwise, please use a VCS stable version. Also, a version with tag = "" is possible.
# athena = { path = "../athena", develop = true }
athena = { path = "../../../athena", develop = true }
#athena = { git = "https://github.com/ls1intum/Athena.git", rev = "2da2d33", subdirectory = "athena"}
llm_core = { path = "../../../llm_core", develop = true }
gitpython = "3.1.50"
tiktoken = "0.12.0"
python-dotenv = "1.2.2"
nltk = "3.9.4"

[tool.poetry.group.dev.dependencies]
types-requests = "2.33.0.20260513"
pydantic = "2.13.4"
prospector = { version = "1.18.0", extras = ["with_mypy"] }

[tool.poetry.group.test.dependencies]
pytest = "8.2.0"
pytest-asyncio = "0.26.0"

[tool.poetry.scripts]
module = "athena:run_module"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
