[tool.poetry]
name = "module_programming_themisml"
version = "2.5"
description = "A module generating feedback suggestions somewhat similar to CoFee, but for programming submissions and by using CodeBERT."
authors = ["Paul Schwind <paul.schwind@tum.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.*"
# if you have local changes in the common Athena module, use the line below. Otherwise, please use a VCS stable version. Also, a version with tag = "" is possible.
athena = { path = "../../../athena", develop = true }
#athena = { git = "https://github.com/ls1intum/Athena.git", rev = "6316d30", subdirectory = "athena" }
antlr4-python3-runtime = "4.13.2"
code-bert-score = "0.4.1"
torch = { version = "2.8.0", source = "pytorch-cpu" }

[tool.poetry.group.dev.dependencies]
types-requests = "2.33.0.20260513"
pydantic = "2.13.4"
prospector = { version = "1.18.0", extras = ["with_mypy"] }

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.scripts]
module = "athena:run_module"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
