[tool.poetry]
name = "module_text_cofee"
version = "0.1.0"
description = "An adapter to the original [Athena](https://github.com/ls1intum/Athena), an implementation of CoFee (text exercise assessment)."
authors = ["Paul Schwind <paul.schwind@tum.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.*"
# if you have local changes in the common Athena module, use the line below. Otherwise, please use a VCS stable version. Also, a version with tag = "" is possible.
athena = { path = "../../../athena", develop = true }
# athena = { git = "https://github.com/ls1intum/Athena.git", rev = "bbb2bb0", subdirectory = "athena" }
protobuf = "6.31.1" # if this version is updated, you also need to update it in the Dockerfile
requests = "2.32.5"

[tool.poetry.group.dev.dependencies]
pydantic = "2.11.7"
prospector = "1.17.3"
types-requests = "2.32.4.20250913"

[tool.poetry.scripts]
module = "athena:run_module"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
