[tool.poetry]
name = "module_text_cofee"
version = "2.0.0"
description = "An adapter to the original [Athena](https://github.com/ls1intum/Athena), an implementation of CoFee (text exercise assessment)."
authors = ["Paul Schwind <paul.schwind@tum.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.14.*"
# if you have local changes in the common Athena module, use the line below. Otherwise, please use a VCS stable version. Also, a version with tag = "" is possible.
athena = { path = "../../../athena", develop = true }
# athena = { git = "https://github.com/ls1intum/Athena.git", rev = "bbb2bb0", subdirectory = "athena" }
protobuf = "5.29.6" # requires libprotobuf >= 5.29 (provided by alpine protobuf-dev)
requests = "2.33.1"

[tool.poetry.group.dev.dependencies]
pydantic = "2.13.3"
prospector = "1.18.0"
types-requests = "2.33.0.20260408"

[tool.poetry.scripts]
module = "athena:run_module"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
