[tool.poetry]
name = "module_text_llm"
version = "0.1.0"
description = "Text assessment LLM module."
authors = ["Felix Dietrich <felixtj.dietrich@tum.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.*"
athena = { path = "../../../athena", develop = true }
# athena = { git = "https://github.com/ls1intum/Athena.git", rev = "2da2d33", subdirectory = "athena"}
llm_core = { path = "../../../llm_core", develop = true }
# langsmith = ">=0.1.0,<0.2.0" # questionable if required here as well
# gitpython = "3.1.41" # questionable if required
nltk = "3.9.2"
# python-dotenv = "1.2.1" # questionable if required
tiktoken = "0.12.0"

[tool.poetry.scripts]
module = "athena:run_module"

[tool.poetry.group.dev.dependencies]
pydantic = "^2.11.7"
prospector = "^1.17.3"
types-requests = "^2.32.4.20250913"
setuptools = "^80.9.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
