[tool.poetry]
name = "module_text_llm"
version = "2.0.0"
description = "Text assessment LLM module."
authors = ["Felix Dietrich <felixtj.dietrich@tum.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.14.*"
athena = { path = "../../../athena", develop = true }
# athena = { git = "https://github.com/ls1intum/Athena.git", rev = "2da2d33", subdirectory = "athena"}
llm_core = { path = "../../../llm_core", develop = true }
nltk = "3.9.4"
tiktoken = "0.12.0"

[tool.poetry.scripts]
module = "athena:run_module"

[tool.poetry.group.dev.dependencies]
pydantic = "2.13.3"
prospector = "1.18.0"
types-requests = "2.33.0.20260408"

[tool.poetry.group.test.dependencies]
pytest = "8.4.2"
pytest-asyncio = "0.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
