[tool.poetry]
name = "module_text_llm"
version = "2.2"
description = "Text assessment LLM module."
authors = ["Felix Dietrich <felixtj.dietrich@tum.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.*"
athena = { path = "../../../athena", develop = true }
# athena = { git = "https://github.com/ls1intum/Athena.git", rev = "2da2d33", subdirectory = "athena"}
llm_core = { path = "../../../llm_core", develop = true }
nltk = "3.9.4"
tiktoken = "0.12.0"

[tool.poetry.scripts]
module = "athena:run_module"

[tool.poetry.group.dev.dependencies]
pydantic = "2.13.4"
prospector = { version = "1.18.0", extras = ["with_mypy"] }
types-requests = "2.33.0.20260513"

[tool.poetry.group.test.dependencies]
pytest = "8.2.0"
pytest-asyncio = "0.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
